 * Fix: `Page.copy()` now raises an error if the page being copied is unsaved (Anton Zhyltsou)
 * Fix: `Page.copy()` now triggers a `page_published` if the copied page is live (Anton Zhyltsou)
 * Fix: The Elasticsearch `URLS` setting can now take a string on its own instead of a list (Sævar Öfjörð Magnússon)


2.10.2 (25.09.2020)
~~~~~~~~~~~~~~~~~~~

 * Fix: Avoid use of `icon` class name on userbar icon to prevent clashes with front-end styles (Karran Besen)
 * Fix: Prevent focused button labels from displaying as white on white (Karran Bessen)
 * Fix: Avoid showing preview button on moderation dashboard for page types with preview disabled (Dino Perovic)
 * Fix: Prevent oversized buttons in moderation dashboard panel (Dan Braghis)
 * Fix: `create_log_entries_from_revisions` now handles revisions that cannot be restored due to foreign key constraints (Matt Westcott)


2.10.1 (26.08.2020)
~~~~~~~~~~~~~~~~~~~

 * Fix: Prevent `create_log_entries_from_revisions` command from failing when page model classes are missing (Dan Braghis)
 * Fix: Prevent page audit log views from failing for user models without a `username` field (Vyacheslav Matyukhin)
 * Fix: Fix icon alignment on menu items (Coen van der Kamp)
 * Fix: Page editor header bar now correctly shows 'Published' or 'Draft' status when no revisions exist (Matt Westcott)
 * Fix: Prevent page editor from failing when `USE_TZ` is false (Matt Westcott)
 * Fix: Ensure whitespace between block-level elements is preserved when stripping tags from rich text for search indexing (Matt Westcott)


2.10 (11.08.2020)
~~~~~~~~~~~~~~~~~

 * Added Django 3.1 support (Matt Westcott, Karl Hobley)
 * Removed support for Python 3.5
 * Implemented configurable moderation workflow (Jacob Topp-Mugglestone, Karl Hobley, Matt Westcott, Dan Braghis)
 * Implemented phrase searching and structured search query expressions (Karl Hobley)
 * Add ability to import redirects from an uploaded file (CSV, TSV, XLS, and XLSX) (Martin Sandström)